--- a/musics.css
+++ b/musics.css
@@ -37,6 +37,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: blur(15px);
+  color: #fff;
 }
 
 img {
@@ -44,15 +45,16 @@ img {
   object-fit: cover;
   margin-bottom: 25px;
   width: 100%;
+  box-shadow: 0px 0px 10px white;
 }
 
 .player {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   color: #fff;
   border-radius: 30px;
   width: 100%;
-  padding: 30px 0px;
+  max-width: 600px; /* Limit width for large screens */
+  padding: 30px 15px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -62,18 +64,15 @@ img {
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
-  line-height: 16px;
-  color: #fff;
+  line-height: 1.4;
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin: 10px 0 20px;
 }
 
 .song {
   font-weight: bold;
   font-size: 24px;
-  line-height: 28px;
-  color: #fff;
+  line-height: 1.2;
   margin-bottom: 50px;
   text-align: center;
 }
@@ -81,19 +80,17 @@ img {
 .progress__container {
   background-color: #e4e9ed;
   border-radius: 5px;
-  width: 100%;
+  width: 90%;
+  max-width: 500px;
   height: 10px;
   display: flex;
   align-items: center;
   cursor: pointer;
-  transition: 0.5s ease;
+  transition: 0.3s ease;
   margin-bottom: 30px;
-  width: 90%;
-  padding-left: 3px;
-  padding-right: 3px;
-  transition: 0.3s;
   box-shadow: 0px 0px 10px white;
 }
+
 .progress {
   background-color: #2b3c5b;
   border-radius: 5px;
@@ -103,7 +100,8 @@ img {
 }
 
 .buttons {
-  width: 80%;
+  width: 90%;
+  max-width: 500px;
   display: flex;
   justify-content: space-between;
 }
@@ -113,11 +111,7 @@ img {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-  width: 80%;
-}
-
-img {
-  box-shadow: 0px 0px 10px white;
+  width: 100%;
 }
 
 .sound-wrapper {
@@ -137,6 +131,7 @@ img {
   font-weight: bold;
   cursor: pointer;
   color: #fff;
+  transition: 0.3s;
 
   &:hover {
     background-color: darkgray;
@@ -167,9 +162,9 @@ span {
 
 .span-wrapper {
   display: flex;
-  gap: 103px;
+  justify-content: space-between;
   margin-bottom: 5px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 
 .controller {
@@ -177,6 +172,7 @@ span {
   font-size: 40px;
   transition: 0.3s;
 }
+
 .controller:hover {
   transform: scale(1.1);
 }
@@ -185,7 +181,8 @@ span {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  width: 88%;
+  width: 90%;
+  max-width: 500px;
 }
 
 .voise__wrapper {
@@ -198,4 +195,54 @@ span {
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  .title {
+    font-size: 18px;
+  }
+
+  .song {
+    font-size: 20px;
+  }
+
+  .progress__container {
+    height: 8px;
+  }
+
+  .buttons-wrapper {
+    gap: 15px;
+  }
+
+  .controller {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 16px;
+  }
+
+  .song {
+    font-size: 18px;
+  }
+
+  .buttons-wrapper {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .controller {
+    font-size: 30px;
+  }
+
+  .range {
+    width: 150px;
+  }
 }
