--- a/musics.css
+++ b/musics.css
@@ -126,10 +126,6 @@ img {
   align-items: center;
 }
 
-.speed-audio {
-  margin-left: 5px;
-}
-
 .speed {
   width: 40px;
   background-color: transparent;
@@ -194,6 +190,10 @@ span {
   gap: 7px;
 }
 
+.volume-value {
+  width: 150px;
+}
+
 .input__wrapper {
   display: flex;
   align-items: center;
@@ -228,9 +228,11 @@ span {
   }
 
   .buttons-wrapper {
-    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
     justify-content: center;
     gap: 15px;
+    margin-bottom: 0;
   }
 
   .range {
@@ -238,7 +240,7 @@ span {
   }
 
   .controller {
-    font-size: 30px;
+    font-size: 40px;
     margin: 5px 0;
   }
 
@@ -246,9 +248,12 @@ span {
     font-size: 13px;
   }
 
-.buttons {
-  margin-bottom: 30px;
-}
+  .buttons {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+    margin-top: 10px;
+  }
 
   .speed-audio {
     width: 100%;
